--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.17.7",
+    "@babel/core": "7.17.8",
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
-    "@babel/runtime": "7.17.7",
+    "@babel/runtime": "7.17.8",
     "@cypress/react": "5.12.4",
-    "@cypress/webpack-dev-server": "1.8.3",
-    "@testing-library/react": "12.1.4",
+    "@cypress/webpack-dev-server": "1.8.4",
+    "@testing-library/react": "13.0.0-alpha.7",
     "babel-jest": "27.5.1",
-    "babel-loader": "8.2.3",
+    "babel-loader": "8.2.4",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "10.2.4",
-    "cypress": "9.5.2",
+    "cypress": "9.5.3",
     "html-webpack-plugin": "5.5.0",
     "husky": "7.0.4",
     "jest": "27.5.1",
-    "lint-staged": "12.3.6",
+    "lint-staged": "12.3.7",
     "mini-css-extract-plugin": "2.6.0",
-    "npm-check-updates": "12.5.3",
-    "prettier": "2.6.0",
+    "npm-check-updates": "12.5.4",
+    "prettier": "2.6.1",
     "prop-types": "15.8.1",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.0.0",
     "source-map-loader": "3.0.1",
     "webpack": "5.70.0",
     "webpack-cli": "4.9.2",
@@ -34,11 +34,11 @@
   "dependencies": {
     "@emotion/react": "11.8.2",
     "@emotion/styled": "11.8.1",
-    "@mui/material": "5.5.1",
+    "@mui/material": "5.5.3",
     "axios": "0.26.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "3.34.16",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-query": "3.34.19",
     "react-redux": "7.2.6",
     "react-router": "6.2.2",
     "react-router-dom": "6.2.2",
