--- a/package.json
+++ b/package.json
@@ -3,43 +3,43 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.18.5",
-    "@babel/plugin-proposal-class-properties": "7.17.12",
+    "@babel/core": "7.18.13",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.18.2",
-    "@babel/preset-react": "7.17.12",
-    "@babel/runtime": "7.18.3",
-    "@cypress/react": "5.12.5",
-    "@cypress/webpack-dev-server": "1.8.4",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-react": "7.18.6",
+    "@babel/runtime": "7.18.9",
+    "@cypress/react": "6.2.0",
+    "@cypress/webpack-dev-server": "2.3.0",
     "@testing-library/react": "13.3.0",
-    "babel-jest": "28.1.1",
+    "babel-jest": "29.0.2",
     "babel-loader": "8.2.5",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "11.0.0",
-    "cypress": "10.1.0",
+    "cypress": "10.7.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
-    "jest": "28.1.1",
-    "lint-staged": "13.0.1",
-    "mini-css-extract-plugin": "2.6.0",
-    "npm-check-updates": "13.1.5",
-    "prettier": "2.6.2",
+    "jest": "29.0.2",
+    "lint-staged": "13.0.3",
+    "mini-css-extract-plugin": "2.6.1",
+    "npm-check-updates": "16.1.0",
+    "prettier": "2.7.1",
     "prop-types": "15.8.1",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "18.2.0",
     "source-map-loader": "4.0.0",
-    "webpack": "5.73.0",
+    "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.2"
+    "webpack-dev-server": "4.10.1"
   },
   "dependencies": {
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
-    "@mui/material": "5.8.3",
-    "@reduxjs/toolkit": "1.8.2",
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
+    "@mui/material": "5.10.3",
+    "@reduxjs/toolkit": "1.8.5",
     "axios": "0.27.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-query": "3.39.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "3.39.2",
     "react-redux": "8.0.2",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
@@ -50,8 +50,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
-    "itest-debug": "cypress open",
-    "itest": "cypress run --browser chrome",
+    "itest-debug": "cypress open --config-file cypress/cypress.config.js",
+    "itest": "cypress run --browser chrome --config cypress/cypress.config.js",
     "ncuu": "ncu -u",
     "prepare": "husky install",
     "start": "webpack serve --mode development",
