--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@types/jest": "29.1.2",
-    "@types/react-dom": "18.0.6",
-    "@types/react-router-dom": "5.3.3",
     "@cypress/react": "6.2.0",
     "@cypress/webpack-dev-server": "2.3.0",
     "@testing-library/react": "13.3.0",
+    "@types/jest": "29.1.2",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
     "babel-jest": "29.0.2",
     "babel-loader": "8.2.5",
     "clean-webpack-plugin": "4.0.0",
@@ -43,6 +43,7 @@
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "redux": "4.2.0",
+    "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
     "typeface-roboto": "1.1.13"
   },
