--- a/package.json
+++ b/package.json
@@ -3,46 +3,47 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.18.13",
+    "@babel/core": "7.19.3",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.18.10",
+    "@babel/preset-env": "7.19.4",
     "@babel/preset-react": "7.18.6",
-    "@babel/runtime": "7.18.9",
+    "@babel/runtime": "7.19.4",
     "@cypress/react": "6.2.0",
-    "@cypress/webpack-dev-server": "2.3.0",
-    "@testing-library/react": "13.3.0",
-    "babel-jest": "29.0.2",
+    "@cypress/webpack-dev-server": "2.4.0",
+    "@testing-library/react": "13.4.0",
+    "babel-jest": "29.2.1",
     "babel-loader": "8.2.5",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "11.0.0",
     "cypress": "10.7.0",
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
-    "jest": "29.0.2",
+    "jest": "29.2.1",
+    "jest-environment-jsdom": "29.2.1",
     "lint-staged": "13.0.3",
     "mini-css-extract-plugin": "2.6.1",
-    "npm-check-updates": "16.1.0",
+    "npm-check-updates": "16.3.13",
     "prettier": "2.7.1",
     "prop-types": "15.8.1",
     "react-test-renderer": "18.2.0",
-    "source-map-loader": "4.0.0",
+    "source-map-loader": "4.0.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.10.1"
+    "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
-    "@mui/material": "5.10.3",
-    "@reduxjs/toolkit": "1.8.5",
-    "axios": "0.27.2",
+    "@mui/material": "5.10.10",
+    "@reduxjs/toolkit": "1.8.6",
+    "axios": "1.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
-    "react-redux": "8.0.2",
-    "react-router": "6.3.0",
-    "react-router-dom": "6.3.0",
+    "react-redux": "8.0.4",
+    "react-router": "6.4.2",
+    "react-router-dom": "6.4.2",
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
     "typeface-roboto": "1.1.13"
@@ -51,7 +52,7 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "itest-debug": "cypress open --config-file cypress/cypress.config.js",
-    "itest": "cypress run --browser chrome --config cypress/cypress.config.js",
+    "itest": "cypress run --browser chrome --config-file cypress/cypress.config.js",
     "ncuu": "ncu -u",
     "prepare": "husky install",
     "start": "webpack serve --mode development",
