--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "5.5.0",
     "husky": "8.0.1",
     "jest": "29.0.2",
+    "jest-environment-jsdom": "29.2.2",
     "lint-staged": "13.0.3",
     "mini-css-extract-plugin": "2.6.1",
     "npm-check-updates": "16.1.0",
@@ -60,9 +61,10 @@
     "test-coverage": "jest src --coverage"
   },
   "jest": {
+    "preset": "ts-jest",
     "rootDir": "./src",
     "transform": {
-      "^.+\\.js$": "babel-jest"
+      "^.+\\.tsx?$": "ts-jest"
     },
     "testEnvironment": "jsdom"
   },
