--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "private": true,
   "devDependencies": {
     "@cypress/react": "6.2.0",
-    "@cypress/webpack-dev-server": "2.4.1",
+    "@cypress/webpack-dev-server": "2.5.0",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "29.2.0",
+    "@types/jest": "29.2.1",
     "@types/react-dom": "18.0.8",
     "@types/react-router-dom": "5.3.3",
-    "babel-jest": "29.2.2",
-    "babel-loader": "9.0.0",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "11.0.0",
     "cypress": "10.11.0",
@@ -33,15 +31,15 @@
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@mui/material": "5.10.11",
+    "@mui/material": "5.10.12",
     "@reduxjs/toolkit": "1.8.6",
-    "axios": "1.1.3",
+    "axios": "0.27.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
     "react-redux": "8.0.4",
-    "react-router": "6.4.2",
-    "react-router-dom": "6.4.2",
+    "react-router": "6.4.3",
+    "react-router-dom": "6.4.3",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
@@ -51,7 +49,7 @@
     "build": "webpack --mode production",
     "dev": "webpack --mode development",
     "itest-debug": "cypress open --config-file cypress/cypress.config.js",
-    "itest": "cypress run --browser chrome --config cypress/cypress.config.js",
+    "itest": "cypress run --browser chrome --config-file cypress/cypress.config.js",
     "ncuu": "ncu -u",
     "prepare": "husky install",
     "start": "webpack serve --mode development",
