--- a/package.json
+++ b/package.json
@@ -3,49 +3,49 @@
   "version": "1.1.0",
   "private": true,
   "devDependencies": {
-    "@babel/core": "7.19.6",
+    "@babel/core": "7.20.12",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/preset-env": "7.19.4",
+    "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
-    "@babel/runtime": "7.20.1",
-    "@cypress/react": "6.2.0",
+    "@babel/runtime": "7.20.13",
+    "@cypress/react": "7.0.2",
     "@testing-library/react": "13.4.0",
-    "@types/react": "18.0.24",
-    "babel-jest": "29.2.2",
-    "babel-loader": "9.0.1",
+    "@types/react": "18.0.27",
+    "babel-jest": "29.4.1",
+    "babel-loader": "9.1.2",
     "clean-webpack-plugin": "4.0.0",
     "copy-webpack-plugin": "11.0.0",
-    "cypress": "10.11.0",
+    "cypress": "12.4.1",
     "html-webpack-plugin": "5.5.0",
-    "husky": "8.0.1",
-    "jest": "29.2.2",
-    "jest-environment-jsdom": "29.2.2",
-    "lint-staged": "13.0.3",
-    "mini-css-extract-plugin": "2.6.1",
-    "npm-check-updates": "16.3.16",
-    "prettier": "2.7.1",
+    "husky": "8.0.3",
+    "jest": "29.4.1",
+    "jest-environment-jsdom": "29.4.1",
+    "lint-staged": "13.1.0",
+    "mini-css-extract-plugin": "2.7.2",
+    "npm-check-updates": "16.6.3",
+    "prettier": "2.8.3",
     "prop-types": "15.8.1",
     "react-test-renderer": "18.2.0",
     "source-map-loader": "4.0.1",
-    "webpack": "5.74.0",
-    "webpack-cli": "4.10.0",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "@mui/material": "5.10.12",
-    "@reduxjs/toolkit": "1.8.6",
-    "axios": "1.1.3",
+    "@mui/material": "5.11.6",
+    "@reduxjs/toolkit": "1.9.2",
+    "axios": "1.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.2",
-    "react-redux": "8.0.4",
-    "react-router": "6.4.3",
-    "react-router-dom": "6.4.3",
-    "redux": "4.2.0",
-    "redux-thunk": "2.4.1",
+    "react-query": "3.39.3",
+    "react-redux": "8.0.5",
+    "react-router": "6.8.0",
+    "react-router-dom": "6.8.0",
+    "redux": "4.2.1",
+    "redux-thunk": "2.4.2",
     "typeface-roboto": "1.1.13"
   },
   "scripts": {
@@ -68,7 +68,8 @@
   },
   "lint-staged": {
     "*.{js,json}": [
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
   }
 }
