--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@babel/runtime": "7.21.0",
     "@cypress/react": "7.0.3",
     "@testing-library/react": "14.0.0",
-    "@types/react": "18.0.29",
+    "@types/react": "18.0.30",
     "babel-jest": "29.5.0",
     "babel-loader": "9.1.2",
     "clean-webpack-plugin": "4.0.0",
@@ -37,10 +37,10 @@
     "@emotion/styled": "11.10.6",
     "@mui/material": "5.11.14",
     "@reduxjs/toolkit": "1.9.3",
+    "@tanstack/react-query": "4.28.0",
     "axios": "1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.3",
     "react-redux": "8.0.5",
     "react-router": "6.9.0",
     "react-router-dom": "6.9.0",
