--- a/package.json
+++ b/package.json
@@ -17,32 +17,31 @@
     "jest": "29.2.2",
     "jest-environment-jsdom": "29.2.2",
     "lint-staged": "13.0.3",
-    "npm-check-updates": "16.3.16",
-    "prettier": "2.7.1",
+    "npm-check-updates": "16.8.0",
+    "prettier": "2.8.7",
     "react-test-renderer": "18.2.0",
     "source-map-loader": "4.0.1",
     "ts-jest": "29.0.3",
     "ts-loader": "9.4.1",
     "typescript": "4.8.4",
-    "webpack": "5.74.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.11.1"
+    "webpack": "5.76.3",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.13.1"
   },
   "dependencies": {
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
-    "@mui/material": "5.10.12",
-    "@reduxjs/toolkit": "1.8.6",
-    "axios": "0.27.2",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/material": "5.11.14",
+    "@reduxjs/toolkit": "1.9.3",
+    "@tanstack/react-query": "4.28.0",
+    "axios": "1.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "3.39.2",
-    "react-redux": "8.0.4",
-    "react-router": "6.4.3",
-    "react-router-dom": "6.4.3",
-    "redux": "4.2.0",
-    "redux-devtools-extension": "2.13.9",
-    "redux-thunk": "2.4.1",
+    "react-redux": "8.0.5",
+    "react-router": "6.9.0",
+    "react-router-dom": "6.9.0",
+    "redux": "4.2.1",
+    "redux-thunk": "2.4.2",
     "typeface-roboto": "1.1.13"
   },
   "scripts": {
@@ -67,7 +66,11 @@
   },
   "lint-staged": {
     "*.{js,json}": [
-      "prettier --write"
+      "prettier --write",
+      "git add"
     ]
+  },
+  "engines" : {
+    "node" : ">=16.0.0"
   }
 }
